--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@font-face
-{
+@font-face {
     font-family: 'BallparkWeiner';
     src: url('polices/ballpark.eot');
     src: url('polices/ballpark.eot?#iefix') format('embedded-opentype'),
@@ -10,8 +9,7 @@
     font-style: normal;
 }
 
-@font-face
-{
+@font-face {
     font-family: 'Dayrom';
     src: url('polices/dayrom.eot');
     src: url('polices/dayrom.eot?#iefix') format('embedded-opentype'),
@@ -24,30 +22,19 @@
 
 /* Eléments principaux de la page */
 
-body
-{
-    /*background: url('images/fond_jaune.png');*/
+body {
     background-color : RGB(236, 229, 214);
     font-family: 'Trebuchet MS', Arial, sans-serif;
     color: #181818;
 }
 
-#bloc_page
-{
-    width: 1300px;
-    margin: auto;
+@media (min-width : 1200px) {
+  #bloc_page{
+    width: 1200px;
+    margin: auto;}
 }
 
-@media all and (max-width: 1024px)
-{
-    #bloc_page
-    {
-        width: auto;
-    }
-}
-
-section h1, footer h1, nav a
-{
+h1, a {
     font-family: Dayrom, serif;
     font-weight: normal;
     text-transform: uppercase;
@@ -56,150 +43,66 @@ section h1, footer h1, nav a
 /* Header Logo domaine */
 
 .img-responsive {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;}
+  margin: auto;
+}
 
+/* nav bar */
 
-  #carousel-example-generic {
+nav a {
+    font-size: 1.2em;
+    text-decoration: none;
+}
+
+nav a:hover {
+    border-bottom: 3px solid #8d0051;
+    background-color : RGB(236, 229, 214);
+}
+
+#carousel-example-generic {
     width : 630px;
     margin : auto;
     margin-bottom: 15px;
 }
 
-@media (max-width : 629px){
+@media (max-width : 629px) {
     #carousel-example-generic {
         width: 100%; } }
 
 /* Barre de navigation */
 
-.navbar-default{
+.navbar-default {
     background-color: RGB(236, 229, 214);
 }
 
-nav ul
-
-
-nav li
-{
-    margin-right: 15px;
-}
-
-nav a
-{
-    font-size: 1.3em;
-    color: #8d0051;
-    padding-bottom: 3px;
-    text-decoration: none;
-
-}
-
-nav a:hover
-{
-    color: #8d0051;
-    border-bottom: 3px solid #8d0051;
-    background-color : RGB(236, 229, 214);
-}
-
-@media all and (max-width: 1024px)
-{
-    nav
-    {
-        width: auto;
-        text-align: center;
-    }
-
-    nav ul
-    {
-        flex-direction: column;
-    }
-
-    nav li
-    {
-        padding-left: 4px;
-    }
-
-    nav a
-    {
-        font-size: 1.1em;
-    }
-
-    nav a:hover
-    {
-        border-bottom: 0;
-    }
-}
-
-
-
 /* Corps */
-
-section
-{
-    display: flex;
-    margin-bottom: 20px;
-}
-
-article
-{
-    text-align: justify;
-    margin-right: 20px;
-    flex: 3;
-}
 
 h1 {
     font-size : 1.5em;
 }
 
-article p
-{
+p {
     font-size: 1em;
     line-height: 1.4;
 }
-
-
-@media all and (max-width: 1024px)
-{
-    section
-    {
-        flex-direction: column;
-    }
-
-    article
-    {
-        width: auto;
-        margin-bottom: 15px;
-    }
-
+.text-justify {
+    background-color: RGB(236, 229, 214);
 }
-
 
 /* Footer */
 
-footer .img-responsive
-{
-
-}
-
-footer p, footer ul
-{
+footer p, footer ul {
     font-size: 1em;
 }
 
-footer h1
-{
+footer h1 {
     font-size: 1.1em;
 }
 
+/* Footer */
 
-
-#partenariat ul
-{
-    
-}
-
-#partenariat a
-{
-    text-decoration: none;
-    color: #8d0051;
+#partenariats a {
+font-size: 1em;
+text-transform: none;
+color: #8d0051;
+text-decoration: none;
 }
