--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,11 @@ h1, a {
   margin: auto;
 }
 
-/* nav bar */
+/* Barre de navigation */
 
+.navbar-default {
+    background-color: RGB(236, 229, 214);
+}
 nav a {
     font-size: 1.2em;
     text-decoration: none;
@@ -59,20 +62,14 @@ nav a:hover {
 }
 
 #carousel-example-generic {
-    width : 630px;
+    width : 900px;
     margin : auto;
     margin-bottom: 15px;
 }
 
-@media (max-width : 629px) {
+@media (max-width : 900px) {
     #carousel-example-generic {
         width: 100%; } }
-
-/* Barre de navigation */
-
-.navbar-default {
-    background-color: RGB(236, 229, 214);
-}
 
 /* Corps */
 
@@ -86,6 +83,22 @@ p {
 }
 .text-justify {
     background-color: RGB(236, 229, 214);
+    border : none;
+}
+
+/* Style des forms */
+.radio-inline {
+  margin-left: 4%;
+}
+.form-group {
+  padding-top : 25px;
+}
+
+/* Style des boutons */
+
+.btn-default{
+background-color: #8d0051;
+color : white;
 }
 
 /* Footer */
