--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,11 @@ nav a:hover {
     background-color : RGB(236, 229, 214);
 }
 
+/* carousel */
+
 #carousel-example-generic {
-    width : 900px;
+    width : 1200px;
+    height : 400px;
     margin : auto;
     margin-bottom: 15px;
 }
