--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,7 @@
 @font-face {
     font-family: 'BallparkWeiner';
     src: url('polices/ballpark.eot');
-    src: url('polices/ballpark.eot?#iefix') format('embedded-opentype'),
-         url('polices/ballpark.woff') format('woff'),
-         url('polices/ballpark.ttf') format('truetype'),
-         url('polices/ballpark.svg#BallparkWeiner') format('svg');
+    src: url('polices/ballpark.eot?#iefix') format('embedded-opentype'), url('polices/ballpark.woff') format('woff'), url('polices/ballpark.ttf') format('truetype'), url('polices/ballpark.svg#BallparkWeiner') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -12,26 +9,25 @@
 @font-face {
     font-family: 'Dayrom';
     src: url('polices/dayrom.eot');
-    src: url('polices/dayrom.eot?#iefix') format('embedded-opentype'),
-         url('polices/dayrom.woff') format('woff'),
-         url('polices/dayrom.ttf') format('truetype'),
-         url('polices/dayrom.svg#Dayrom') format('svg');
+    src: url('polices/dayrom.eot?#iefix') format('embedded-opentype'), url('polices/dayrom.woff') format('woff'), url('polices/dayrom.ttf') format('truetype'), url('polices/dayrom.svg#Dayrom') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
+
 /* Eléments principaux de la page */
 
 body {
-    background-color : RGB(236, 229, 214);
+    background-color: RGB(236, 229, 214);
     font-family: 'Trebuchet MS', Arial, sans-serif;
     color: #181818;
 }
 
-@media (min-width : 1200px) {
-    #bloc_page{
+@media (min-width: 1200px) {
+    #bloc_page {
         width: 1200px;
-        margin: auto;}
+        margin: auto;
+    }
 }
 
 h1, a {
@@ -40,11 +36,13 @@ h1, a {
     text-transform: uppercase;
 }
 
+
 /* Header Logo domaine */
 
 .img-responsive {
     margin: auto;
 }
+
 
 /* Barre de navigation */
 
@@ -59,25 +57,29 @@ nav a {
 
 nav a:hover {
     border-bottom: 3px solid #8d0051;
-    background-color : RGB(236, 229, 214);
+    background-color: RGB(236, 229, 214);
 }
+
 
 /* carousel */
 
 #carousel-example-generic {
-    width : 1200px;
-    margin : auto;
+    width: 1200px;
+    margin: auto;
     margin-bottom: 15px;
 }
 
-@media (max-width : 1200px) {
+@media (max-width: 1200px) {
     #carousel-example-generic {
-        width: 100%; } }
+        width: 100%;
+    }
+}
+
 
 /* Corps */
 
 h1 {
-    font-size : 1.5em;
+    font-size: 1.5em;
 }
 
 p {
@@ -85,42 +87,49 @@ p {
     line-height: 1.4;
     text-align: justify;
 }
+
 .text-justify {
     background-color: RGB(236, 229, 214);
-    border : none;
+    border: none;
 }
 
 .texte-vin-marge {
-  margin-right: 40px;
+    margin-right: 40px;
 }
 
 .marge-bloc-texte {
-  margin-top: 50px;
+    margin-top: 50px;
 }
 
-@media (max-width : 400px){
-  .left-block{
-    position: relative;
-    top: 50%;
-    transform: translateY(+60%);<br>}
-  }
+@media (max-width: 400px) {
+    .left-block {
+        position: relative;
+        top: 50%;
+        transform: translateY(+60%);
+        <br>
+    }
+}
 
 /* Style des forms */
+
 .radio-inline {
     margin-left: 4%;
 }
+
 .form-group {
-    padding-top : 25px;
+    padding-top: 25px;
 }
 
 /* Style des boutons */
 
-.btn-default{
+.btn-default {
     background-color: #8d0051;
-    color : white;
+    color: white;
+    margin-top : 25px;
 }
+
 .btn-default:hover {
-  color :  #8d0051;
+    color: #8d0051;
 }
 
 /* style de la carte page contact */
@@ -128,13 +137,15 @@ p {
 iframe {
     width: 600px;
     height: 350px;
-    margin : auto;
+    margin: auto;
 }
-@media (max-width : 1200px) {
+
+@media (max-width: 1200px) {
     iframe {
-      width : 90%;
-      height : auto;
+        width: 90%;
+        height: auto;
     }
+}
 
 /* Footer */
 
@@ -146,11 +157,16 @@ footer h1 {
     font-size: 1.1em;
 }
 
-/* Footer */
-
 #partenariats a {
-font-size: 1em;
-text-transform: none;
-color: #8d0051;
-text-decoration: none;
+    font-size: 1em;
+    text-transform: none;
+    color: #8d0051;
+    text-decoration: none;
+}
+
+footer .btn-default {
+    background-color: #8d0051;
+    color: white;
+    margin-top: 0px;
+    margin-left: 40%;
 }
